HTML CSS : Home_Study

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="CSS/main.css" />
   </head>
   <body>
-    <img src="lion.png" class="profile" />
+    <img src="/img/lion.png" class="profile" />
     <h4 class="title">Yohan</h4>
     <p class="spectial">Front-end Developer</p>
 
     <div class="description">
-      <div></div>
+      <p>프론트앤드 개발자 공부 중 입니다.</p>
     </div>
   </body>
 </html>
