--- a/layout3.html
+++ b/layout3.html
@@ -3,28 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="CSS/layout3_main.css" />
+    <link href="../fa/css/all.css" rel="stylesheet" />
+    <link
+      href="https://fonts.foofleapis.com/css?family=Nanum+Gothic&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
     <div class="main-background">
       <div class="main-title-box">
-        <h3 class="main-title">Buy our shoes</h3>
+        <h3 class="main-title">Buy our excellent shoes!</h3>
         <p class="main-content">
-          aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-          aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-          aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-          aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt a
+          consectetur molestiae dolorem tempore eaque culpa voluptas odio in
+          obcaecati.
         </p>
       </div>
       <button class="main-button position">Buy Now</button>
     </div>
     <div class="Ex-box" style="padding: 50px">
-      <h2>온라인샵 단독 상품</h2>
+      <h4>How we design our shoes</h4>
       <p>
-        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
+        aliquid, libero ut distinctio tempora labore ipsum tempore quae atque
+        consectetur dolores, sapiente cumque animi provident.
       </p>
+    </div>
+    <div class="explanin-container">
+      <div>
+        <i class="fas fa-shopping-cart fa-3x"></i>
+        <h4>Fast Shipping</h4>
+        <p>We ship 90% faster than any other services</p>
+      </div>
+      <div>
+        <h4>Global</h4>
+        <p>We serve global customers, anywhere</p>
+      </div>
+      <div>
+        <i class="fas fa-tshirt fa-3x"></i>
+        <h4>Good Quality</h4>
+        <p>Superior quality is not an option</p>
+      </div>
+      <div>
+        <h4>Fast Service</h4>
+        <p>Customer calls and service</p>
+      </div>
+      <div style="clear: both; float: none"></div>
     </div>
 
     <div class="form-container">
